kubernetes/apps/observability/victoria-logs/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  annotations:
    gethomepage.dev/description: "Cluster & syslog log storage"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Observability"
    gethomepage.dev/href: "https://victorialogs.${DOMAIN_CLUSTER}/select/vmui/"
    gethomepage.dev/icon: "mdi-text-box-search"
    gethomepage.dev/name: "VictoriaLogs"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=victoria-logs-single"
spec:
  hostnames:
    - "victorialogs.${DOMAIN_CLUSTER}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: victoria-logs-server
          port: 9428
